--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,7 +8,7 @@ include install.json
 include ts*.json
 include yarn.lock
 
-graft binderTest/labextension
+graft myextension/labextension
 
 # Javascript files
 graft src
