--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "binderTest",
+  "name": "myextension",
   "version": "0.1.0",
-  "description": "Testing JLabBinders",
+  "description": "binder testing",
   "keywords": [
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "homepage": "https://github.com/TarekAlMustafa/BinderTest",
+  "homepage": "https://github.com/github_username/myextension",
   "bugs": {
-    "url": "https://github.com/TarekAlMustafa/BinderTest/issues"
+    "url": "https://github.com/github_username/myextension/issues"
   },
   "license": "BSD-3-Clause",
   "author": {
@@ -25,7 +25,7 @@
   "style": "style/index.css",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TarekAlMustafa/BinderTest.git"
+    "url": "https://github.com/github_username/myextension.git"
   },
   "scripts": {
     "build": "jlpm build:lib && jlpm build:labextension:dev",
@@ -36,7 +36,7 @@
     "clean": "jlpm clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:lintcache": "rimraf .eslintcache .stylelintcache",
-    "clean:labextension": "rimraf binderTest/labextension",
+    "clean:labextension": "rimraf myextension/labextension",
     "clean:all": "jlpm clean:lib && jlpm clean:labextension && jlpm clean:lintcache",
     "eslint": "jlpm eslint:check --fix",
     "eslint:check": "eslint . --cache --ext .ts,.tsx",
@@ -91,12 +91,12 @@
             "pip"
           ],
           "base": {
-            "name": "binderTest"
+            "name": "myextension"
           }
         }
     },
     "extension": true,
-    "outputDir": "binderTest/labextension"
+    "outputDir": "myextension/labextension"
   },
   "jupyter-releaser": {
     "hooks": {
